# stereo_vision

./: CMakeLists.txt  README.md  parameters.txt
build_mac/: CMakeCache.txt  Makefile  cmake_install.cmake  irdv_sim.cbp  main  pcl.pcd
build_ubuntu/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cbp
params/: cameraParams_left.yml  cameraParams_right.yml  stereo_camera.yml  stereo_sunny.yml
src/: main.cpp
src/basefunc/: basefunc.cpp  basefunc.h
src/calib/: stereocalib.cpp  stereocalib.h
src/other/: datatypes.h  paramsreader.h
src/reconstruct/: stereoreconstruction.cpp  stereoreconstruction.h
src/reconstruct/libelas/: process.h
src/reconstruct/sgm/: stereo_costs.h  stereo_sgm.cpp  stereo_sgm.h
src/rectify/: stereorectify.cpp  stereorectify.h
sunny_day/sunny_day-calib/: cam1.cal  cam2.cal
